--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#il40m{height:10px;width:10px;border-radius:100%;background-color:black;}#i6y98{height:10px;width:10px;border-radius:100%;background-color:black;}#ixebw{height:10px;width:10px;border-radius:100%;background-color:black;}#i78q3{width:5%;}#iuj88{width:5%;}#iui0s{height:600px;}#i04gd{height:100%;}#itprq{height:100%;}#ifhdj{height:100%;}#iy3z9{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-fox-1595385.jpg');}#iwnqg{right:0px;left:0px;top:0px;bottom:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-christina-morillo-1181245.jpg');}#iw325{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-elevate-digital-1647919.jpg');padding:0px 0 0 0;}#i8y9r{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i6pv8{display:flex;justify-content:center;align-items:center;}#i86u9{font-size:5rem;font-weight:700;}#iah99{font-size:5rem;color:#26ccca;font-weight:700;}#iisks{font-weight:300;}#it8on{font-weight:700;font-size:5rem;}#iwcyh{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#i0vgy{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i2k8p{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#i0vgy:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#i2k8p:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}
+* { box-sizing: border-box; } body {margin: 0;}#il40m{height:10px;width:10px;border-radius:100%;background-color:black;}#i6y98{height:10px;width:10px;border-radius:100%;background-color:black;}#ixebw{height:10px;width:10px;border-radius:100%;background-color:black;}#i78q3{width:5%;}#iuj88{width:5%;}#iui0s{height:600px;}#i04gd{height:100%;}#itprq{height:100%;}#ifhdj{height:100%;}#iy3z9{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-fox-1595385.jpg');padding:0px 0 0 0;}#iwnqg{right:0px;left:0px;top:0px;bottom:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-christina-morillo-1181245.jpg');padding:0px 0 0 0;}#iw325{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-elevate-digital-1647919.jpg');padding:0px 0 0 0;}#i8y9r{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i6pv8{display:flex;justify-content:center;align-items:center;}#i86u9{font-size:5rem;font-weight:700;}#iah99{font-size:5rem;color:#26ccca;font-weight:700;}#iisks{font-size:13px;font-weight:500;color:grey;padding:0px 10px 0px 10px;}#it8on{font-weight:700;font-size:5rem;}#iwcyh{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#i0vgy{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i2k8p{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#i0vgy:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#i2k8p:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#ilwe2{display:flex;justify-content:space-between;align-items:center;background-color:#f5f5f5;padding:15px 15px 15px 15px;}#iumgj{display:flex;align-items:center;width:400px;}#i30sb{font-weight:300;}#i54bq{color:grey;font-weight:500;font-size:13px;}#ifhj3{display:flex;align-items:center;}#i93cf{display:flex;align-items:center;}#iup13{font-size:13px;font-weight:500;color:grey;padding:0 30px 0 0;}#irsft{font-size:13px;font-weight:500;color:grey;padding:0px 30px 0px 0px;}#i2cbq{width:15px;height:15px;margin:0px 5px 0px 5px;}#ib0eb{width:15px;height:15px;margin:0px 5px 0px 5px;}#ii7bd{width:20px;height:20px;margin:0px 5px 0px 5px;}#i6lli{padding:30px 20px;}#iowcc{padding:30px 20px;}#ikh8l{font-size:5rem;font-weight:700;}#iixkn{font-size:5rem;color:#26ccca;font-weight:700;}#iy53f{font-weight:700;font-size:5rem;}#isvh8{display:flex;justify-content:center;align-items:center;}#ionu7{font-weight:300;}#iuxon{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#iuxon:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#inm9q{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#inm9q:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i7tos{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#ittlp{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i2gn5{font-size:5rem;font-weight:700;}#i9ge8{font-size:5rem;color:#26ccca;font-weight:700;}#iwoqw{font-weight:700;font-size:5rem;}#imki1{display:flex;justify-content:center;align-items:center;}#ih3xf{font-weight:300;}#i1n38{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i1n38:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#ijbbg{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#ijbbg:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i8gwly{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#iza2bw{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}@media (max-width: 990px){#i86u9{font-size:4rem;}#iah99{font-size:4rem;}#it8on{font-size:4rem;}#iui0s{height:500px;}#ikh8l{font-size:4rem;}#iixkn{font-size:4rem;}#iy53f{font-size:4rem;}#i2gn5{font-size:4rem;}#i9ge8{font-size:4rem;}#iwoqw{font-size:4rem;}}@media (max-width: 766px){#ilwe2{display:none;}#i86u9{font-size:3rem;}#iah99{font-size:3rem;}#it8on{font-size:3rem;}#iui0s{height:430px;}#i78q3{width:8%;}#i0vgy{padding:12px 28px 12px 28px;font-size:13px;}#i2k8p{padding:12px 28px 12px 28px;font-size:13px;}#iwcyh{padding:18px 0px 0px 0px;}#iuj88{width:8%;}#ikh8l{font-size:3rem;}#iixkn{font-size:3rem;}#iy53f{font-size:3rem;}#iuxon{padding:12px 28px 12px 28px;font-size:13px;}#inm9q{padding:12px 28px 12px 28px;font-size:13px;}#i7tos{padding:18px 0px 0px 0px;}#i2gn5{font-size:3rem;}#i9ge8{font-size:3rem;}#iwoqw{font-size:3rem;}#i1n38{padding:12px 28px 12px 28px;font-size:13px;}#ijbbg{padding:12px 28px 12px 28px;font-size:13px;}#i8gwly{padding:18px 0px 0px 0px;}}@media (max-width: 576px){#i86u9{font-size:2rem;}#iah99{font-size:2rem;}#it8on{font-size:2rem;}#iui0s{height:310px;}#ikh8l{font-size:2rem;}#iixkn{font-size:2rem;}#iy53f{font-size:2rem;}#i2gn5{font-size:2rem;}#i9ge8{font-size:2rem;}#iwoqw{font-size:2rem;}}@media (max-width: 380px){#iah99{margin:-10px 0px 0px 0px;}#it8on{margin:-10px 0 0 0;}#iui0s{height:250px;}#i6pv8{flex-direction:column;}#i78q3{width:10%;}#i0vgy{padding:5px 18px 5px 18px;font-size:12px;}#i2k8p{padding:5px 18px 5px 18px;font-size:12px;}#iwcyh{padding:5px 0px 0px 0px;}#iuj88{width:10%;}#iixkn{margin:-10px 0px 0px 0px;}#iy53f{margin:-10px 0 0 0;}#isvh8{flex-direction:column;}#iuxon{padding:5px 18px 5px 18px;font-size:12px;}#inm9q{padding:5px 18px 5px 18px;font-size:12px;}#i7tos{padding:5px 0px 0px 0px;}#i9ge8{margin:-10px 0px 0px 0px;}#iwoqw{margin:-10px 0 0 0;}#imki1{flex-direction:column;}#i1n38{padding:5px 18px 5px 18px;font-size:12px;}#ijbbg{padding:5px 18px 5px 18px;font-size:12px;}#i8gwly{padding:5px 0px 0px 0px;}}
 
 </style>
 
@@ -79,24 +79,86 @@
 		<html>
  <head></head>
  <body id="ixj8">
-  <div class="container-fluid p-0" id="i7unk">
+  <section id="ilwe2">
+   <div id="iumgj" class="div">
+    <div id="iup13">
+     MON - FRI: 07:00 AM - 05:00 PM
+    </div><a id="i54bq" class="text-decoration-none">FAQ</a>
+   </div>
+   <div id="ifhj3" class="div">
+    <div id="itq5w" class="div">
+     <div id="irsft">
+      CONTACT +91 000 2222 333
+     </div>
+    </div>
+    <div id="i93cf" class="div">
+     <div id="iisks">
+      FOLLOW
+     </div>
+     <div id="isxw3" class="div">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/icons8-facebook-50.png" alt="Image" id="i2cbq" class="img-fluid"><img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/icons8-twitterx-50 (1).png" alt="Image" id="ib0eb" class="img-fluid"><img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/icons8-instagram-48.png" alt="Image" id="ii7bd" class="img-fluid">
+     </div>
+    </div>
+   </div>
+  </section>
+  <div id="i7unk" class="container-fluid p-0">
    <div id="carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" class="carousel slide">
-    <div class="carousel-indicators" id="iqlsm">
-     <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" class="active" id="il40m"></div>
+    <div id="iqlsm" class="carousel-indicators">
+     <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" id="il40m" class="active"></div>
      <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="1" aria-label="Slide 2" id="i6y98"></div>
      <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="2" aria-label="Slide 3" id="ixebw"></div>
     </div>
-    <div class="carousel-inner" id="iui0s">
-     <div class="carousel-item active" id="i04gd">
-      <div class="carousel-caption h-100" id="iwnqg"></div>
+    <div id="iui0s" class="carousel-inner">
+     <div id="i04gd" class="carousel-item active">
+      <div id="iwnqg" class="carousel-caption h-100">
+       <section id="ittlp">
+        <div class="div" id="isvh8">
+         <div id="ikh8l">
+          BEING
+         </div>
+         <div id="iixkn">
+          &nbsp;SMART&nbsp;
+         </div>
+         <div id="iy53f">
+          IS OUR GAME
+         </div>
+        </div>
+        <div id="ionu7">
+         You can import the full demo content with just a single mouse click.
+        </div>
+        <div class="div" id="i7tos">
+         <button type="button" id="iuxon">DISCOVER</button><button type="button" id="inm9q">GET</button>
+        </div>
+       </section>
+      </div>
      </div>
-     <div class="carousel-item" id="itprq">
-      <div class="carousel-caption h-100" id="iy3z9"></div>
+     <div id="itprq" class="carousel-item">
+      <div id="iy3z9" class="carousel-caption h-100">
+       <section id="iza2bw">
+        <div class="div" id="imki1">
+         <div id="i2gn5">
+          ASPIRING
+         </div>
+         <div id="i9ge8">
+          &nbsp;FORCE&nbsp;
+         </div>
+         <div id="iwoqw">
+          IN DESIGN
+         </div>
+        </div>
+        <div id="ih3xf">
+         You can import the full demo content with just a single mouse click.
+        </div>
+        <div class="div" id="i8gwly">
+         <button type="button" id="i1n38">DISCOVER</button><button type="button" id="ijbbg">GET</button>
+        </div>
+       </section>
+      </div>
      </div>
-     <div class="carousel-item" id="ifhdj">
-      <div class="carousel-caption h-100" id="iw325">
+     <div id="ifhdj" class="carousel-item">
+      <div id="iw325" class="carousel-caption h-100">
        <section id="i8y9r">
-        <div class="div" id="i6pv8">
+        <div id="i6pv8" class="div">
          <div id="i86u9">
           SIMPLY
          </div>
@@ -107,24 +169,29 @@
           ETHIC
          </div>
         </div>
-        <div id="iisks">
+        <div id="i30sb">
          You can import the full demo content with just a single mouse click.
         </div>
-        <div class="div" id="iwcyh">
+        <div id="iwcyh" class="div">
          <button type="button" id="i0vgy">DISCOVER</button><button type="button" id="i2k8p">GET</button>
         </div>
        </section>
       </div>
      </div>
     </div>
-    <div data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide="prev" class="carousel-control-prev" id="iuj88">
-     <span aria-hidden="true" class="carousel-control-prev-icon" id="iqjpa"></span><span class="visually-hidden">Previous</span>
+    <div data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide="prev" id="iuj88" class="carousel-control-prev">
+     <span aria-hidden="true" id="iqjpa" class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span>
     </div>
-    <div data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide="next" class="carousel-control-next" id="i78q3">
-     <span aria-hidden="true" class="carousel-control-next-icon" id="i24al"></span><span class="visually-hidden">Next</span>
+    <div data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide="next" id="i78q3" class="carousel-control-next">
+     <span aria-hidden="true" id="i24al" class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span>
     </div>
    </div>
   </div>
+  <section id="i6lli">
+   <section id="iowcc">
+    <div class="container" id="idzlk"></div>
+   </section>
+  </section>
  </body>
 </html>
 </html>
