--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#il40m{height:10px;width:10px;border-radius:100%;background-color:black;}#i6y98{height:10px;width:10px;border-radius:100%;background-color:black;}#ixebw{height:10px;width:10px;border-radius:100%;background-color:black;}#i78q3{width:5%;}#iuj88{width:5%;}#iui0s{height:600px;}#i04gd{height:100%;}#itprq{height:100%;}#ifhdj{height:100%;}#iy3z9{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-fox-1595385.jpg');padding:0px 0 0 0;}#iwnqg{right:0px;left:0px;top:0px;bottom:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-christina-morillo-1181245.jpg');padding:0px 0 0 0;}#iw325{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-elevate-digital-1647919.jpg');padding:0px 0 0 0;}#i8y9r{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i6pv8{display:flex;justify-content:center;align-items:center;}#i86u9{font-size:5rem;font-weight:700;}#iah99{font-size:5rem;color:#26ccca;font-weight:700;}#iisks{font-size:13px;font-weight:500;color:grey;padding:0px 10px 0px 10px;}#it8on{font-weight:700;font-size:5rem;}#iwcyh{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#i0vgy{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i2k8p{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#i0vgy:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#i2k8p:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#ilwe2{display:flex;justify-content:space-between;align-items:center;background-color:#f5f5f5;padding:15px 15px 15px 15px;}#iumgj{display:flex;align-items:center;width:400px;}#i30sb{font-weight:300;}#i54bq{color:grey;font-weight:500;font-size:13px;}#ifhj3{display:flex;align-items:center;}#i93cf{display:flex;align-items:center;}#iup13{font-size:13px;font-weight:500;color:grey;padding:0 30px 0 0;}#irsft{font-size:13px;font-weight:500;color:grey;padding:0px 30px 0px 0px;}#i2cbq{width:15px;height:15px;margin:0px 5px 0px 5px;}#ib0eb{width:15px;height:15px;margin:0px 5px 0px 5px;}#ii7bd{width:20px;height:20px;margin:0px 5px 0px 5px;}#i6lli{padding:30px 20px;}#iowcc{padding:30px 20px;}#ikh8l{font-size:5rem;font-weight:700;}#iixkn{font-size:5rem;color:#26ccca;font-weight:700;}#iy53f{font-weight:700;font-size:5rem;}#isvh8{display:flex;justify-content:center;align-items:center;}#ionu7{font-weight:300;}#iuxon{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#iuxon:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#inm9q{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#inm9q:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i7tos{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#ittlp{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i2gn5{font-size:5rem;font-weight:700;}#i9ge8{font-size:5rem;color:#26ccca;font-weight:700;}#iwoqw{font-weight:700;font-size:5rem;}#imki1{display:flex;justify-content:center;align-items:center;}#ih3xf{font-weight:300;}#i1n38{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i1n38:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#ijbbg{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#ijbbg:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i8gwly{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#iza2bw{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}@media (max-width: 990px){#i86u9{font-size:4rem;}#iah99{font-size:4rem;}#it8on{font-size:4rem;}#iui0s{height:500px;}#ikh8l{font-size:4rem;}#iixkn{font-size:4rem;}#iy53f{font-size:4rem;}#i2gn5{font-size:4rem;}#i9ge8{font-size:4rem;}#iwoqw{font-size:4rem;}}@media (max-width: 766px){#ilwe2{display:none;}#i86u9{font-size:3rem;}#iah99{font-size:3rem;}#it8on{font-size:3rem;}#iui0s{height:430px;}#i78q3{width:8%;}#i0vgy{padding:12px 28px 12px 28px;font-size:13px;}#i2k8p{padding:12px 28px 12px 28px;font-size:13px;}#iwcyh{padding:18px 0px 0px 0px;}#iuj88{width:8%;}#ikh8l{font-size:3rem;}#iixkn{font-size:3rem;}#iy53f{font-size:3rem;}#iuxon{padding:12px 28px 12px 28px;font-size:13px;}#inm9q{padding:12px 28px 12px 28px;font-size:13px;}#i7tos{padding:18px 0px 0px 0px;}#i2gn5{font-size:3rem;}#i9ge8{font-size:3rem;}#iwoqw{font-size:3rem;}#i1n38{padding:12px 28px 12px 28px;font-size:13px;}#ijbbg{padding:12px 28px 12px 28px;font-size:13px;}#i8gwly{padding:18px 0px 0px 0px;}}@media (max-width: 576px){#i86u9{font-size:2rem;}#iah99{font-size:2rem;}#it8on{font-size:2rem;}#iui0s{height:310px;}#ikh8l{font-size:2rem;}#iixkn{font-size:2rem;}#iy53f{font-size:2rem;}#i2gn5{font-size:2rem;}#i9ge8{font-size:2rem;}#iwoqw{font-size:2rem;}}@media (max-width: 380px){#iah99{margin:-10px 0px 0px 0px;}#it8on{margin:-10px 0 0 0;}#iui0s{height:250px;}#i6pv8{flex-direction:column;}#i78q3{width:10%;}#i0vgy{padding:5px 18px 5px 18px;font-size:12px;}#i2k8p{padding:5px 18px 5px 18px;font-size:12px;}#iwcyh{padding:5px 0px 0px 0px;}#iuj88{width:10%;}#iixkn{margin:-10px 0px 0px 0px;}#iy53f{margin:-10px 0 0 0;}#isvh8{flex-direction:column;}#iuxon{padding:5px 18px 5px 18px;font-size:12px;}#inm9q{padding:5px 18px 5px 18px;font-size:12px;}#i7tos{padding:5px 0px 0px 0px;}#i9ge8{margin:-10px 0px 0px 0px;}#iwoqw{margin:-10px 0 0 0;}#imki1{flex-direction:column;}#i1n38{padding:5px 18px 5px 18px;font-size:12px;}#ijbbg{padding:5px 18px 5px 18px;font-size:12px;}#i8gwly{padding:5px 0px 0px 0px;}}
+* { box-sizing: border-box; } body {margin: 0;}#il40m{height:10px;width:10px;border-radius:100%;background-color:black;}#i6y98{height:10px;width:10px;border-radius:100%;background-color:black;}#ixebw{height:10px;width:10px;border-radius:100%;background-color:black;}#i78q3{width:5%;}#iuj88{width:5%;}#iui0s{height:600px;}#i04gd{height:100%;}#itprq{height:100%;}#ifhdj{height:100%;}#iy3z9{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-fox-1595385.jpg');padding:0px 0 0 0;}#iwnqg{right:0px;left:0px;top:0px;bottom:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-christina-morillo-1181245.jpg');padding:0px 0 0 0;}#iw325{right:0px;bottom:0px;left:0px;top:0px;background-repeat:no-repeat;background-position:center center;background-attachment:scroll;background-size:cover;background-image:url('https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/pexels-elevate-digital-1647919.jpg');padding:0px 0 0 0;}#i8y9r{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i6pv8{display:flex;justify-content:center;align-items:center;}#i86u9{font-size:5rem;font-weight:700;}#iah99{font-size:5rem;color:#26ccca;font-weight:700;}#iisks{font-size:13px;font-weight:500;color:grey;padding:0px 10px 0px 10px;}#it8on{font-weight:700;font-size:5rem;}#iwcyh{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#i0vgy{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i2k8p{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#i0vgy:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#i2k8p:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#ilwe2{display:flex;justify-content:space-between;align-items:center;background-color:#f5f5f5;padding:15px 15px 15px 15px;}#iumgj{display:flex;align-items:center;width:400px;}#i30sb{font-weight:300;}#i54bq{color:grey;font-weight:500;font-size:13px;}#ifhj3{display:flex;align-items:center;}#i93cf{display:flex;align-items:center;}#iup13{font-size:13px;font-weight:500;color:grey;padding:0 30px 0 0;}#irsft{font-size:13px;font-weight:500;color:grey;padding:0px 30px 0px 0px;}#i2cbq{width:15px;height:15px;margin:0px 5px 0px 5px;}#ib0eb{width:15px;height:15px;margin:0px 5px 0px 5px;}#ii7bd{width:20px;height:20px;margin:0px 5px 0px 5px;}#i6lli{position:absolute;top:0px;left:0px;width:100%;z-index:11;}#ikh8l{font-size:5rem;font-weight:700;}#iixkn{font-size:5rem;color:#26ccca;font-weight:700;}#iy53f{font-weight:700;font-size:5rem;}#isvh8{display:flex;justify-content:center;align-items:center;}#ionu7{font-weight:300;}#iuxon{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#iuxon:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#inm9q{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#inm9q:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i7tos{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#ittlp{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#i2gn5{font-size:5rem;font-weight:700;}#i9ge8{font-size:5rem;color:#26ccca;font-weight:700;}#iwoqw{font-weight:700;font-size:5rem;}#imki1{display:flex;justify-content:center;align-items:center;}#ih3xf{font-weight:300;}#i1n38{background-color:#ffe625;border:2px solid #ffe625;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0 15px 0 0;}#i1n38:hover{background-color:#000000;color:white;border:2px solid #000000;transition:background-color 0.4s ease;}#ijbbg{background-color:transparent;border:2px solid white;padding:18px 35px 18px 35px;font-size:14px;font-weight:600;margin:0px 0px 0px 15px;color:white;}#ijbbg:hover{color:white;background-color:#000000;transition:background-color 0.4s ease;border:2px solid #000000;}#i8gwly{display:flex;justify-content:center;align-items:center;padding:25px 0px 0px 0px;}#iza2bw{padding:30px 20px;height:100%;background-color:rgba(0,0,0,0.29);border:1 solid #000000;display:flex;flex-direction:column;justify-content:center;align-items:center;}#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218{position:relative;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ib1u5i{color:white;font-weight:500;}#ito6f{color:white;font-weight:500;}#ikxch{color:white;font-weight:500;}#ixlzd{color:white;}#io1trn{padding:0px 20px 0 20px;}#i2htuy{background-color:#ffe625;padding:30px 30px 30px 30px;}#i8trci{background-color:#f5f5f5;}#i30y9j{background-color:#26ccca;}#i9tczw{padding:10px;font-weight:600;}#iq0kgx{padding:10px 10px 30px 10px;}#isyb28{color:#000000;padding:0 0 0 10px;}@media only screen and (max-width: 992px){.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}@media (max-width: 990px){#i86u9{font-size:4rem;}#iah99{font-size:4rem;}#it8on{font-size:4rem;}#iui0s{height:500px;}#ikh8l{font-size:4rem;}#iixkn{font-size:4rem;}#iy53f{font-size:4rem;}#i2gn5{font-size:4rem;}#i9ge8{font-size:4rem;}#iwoqw{font-size:4rem;}}@media (max-width: 766px){#ilwe2{display:none;}#i86u9{font-size:3rem;}#iah99{font-size:3rem;}#it8on{font-size:3rem;}#iui0s{height:430px;}#i78q3{width:8%;}#i0vgy{padding:12px 28px 12px 28px;font-size:13px;}#i2k8p{padding:12px 28px 12px 28px;font-size:13px;}#iwcyh{padding:18px 0px 0px 0px;}#iuj88{width:8%;}#ikh8l{font-size:3rem;}#iixkn{font-size:3rem;}#iy53f{font-size:3rem;}#iuxon{padding:12px 28px 12px 28px;font-size:13px;}#inm9q{padding:12px 28px 12px 28px;font-size:13px;}#i7tos{padding:18px 0px 0px 0px;}#i2gn5{font-size:3rem;}#i9ge8{font-size:3rem;}#iwoqw{font-size:3rem;}#i1n38{padding:12px 28px 12px 28px;font-size:13px;}#ijbbg{padding:12px 28px 12px 28px;font-size:13px;}#i8gwly{padding:18px 0px 0px 0px;}}@media (max-width: 576px){#i86u9{font-size:2rem;}#iah99{font-size:2rem;}#it8on{font-size:2rem;}#iui0s{height:310px;}#ikh8l{font-size:2rem;}#iixkn{font-size:2rem;}#iy53f{font-size:2rem;}#i2gn5{font-size:2rem;}#i9ge8{font-size:2rem;}#iwoqw{font-size:2rem;}}@media (max-width: 380px){#iah99{margin:-10px 0px 0px 0px;}#it8on{margin:-10px 0 0 0;}#iui0s{height:250px;}#i6pv8{flex-direction:column;}#i78q3{width:10%;}#i0vgy{padding:5px 18px 5px 18px;font-size:12px;}#i2k8p{padding:5px 18px 5px 18px;font-size:12px;}#iwcyh{padding:5px 0px 0px 0px;}#iuj88{width:10%;}#iixkn{margin:-10px 0px 0px 0px;}#iy53f{margin:-10px 0 0 0;}#isvh8{flex-direction:column;}#iuxon{padding:5px 18px 5px 18px;font-size:12px;}#inm9q{padding:5px 18px 5px 18px;font-size:12px;}#i7tos{padding:5px 0px 0px 0px;}#i9ge8{margin:-10px 0px 0px 0px;}#iwoqw{margin:-10px 0 0 0;}#imki1{flex-direction:column;}#i1n38{padding:5px 18px 5px 18px;font-size:12px;}#ijbbg{padding:5px 18px 5px 18px;font-size:12px;}#i8gwly{padding:5px 0px 0px 0px;}}
 
 </style>
 
@@ -108,11 +108,26 @@
      <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="1" aria-label="Slide 2" id="i6y98"></div>
      <div type="button" data-bs-target="#carouselExampleCaptions-cd60e634-835b-4b3f-8ce4-817ce0df4218" data-bs-slide-to="2" aria-label="Slide 3" id="ixebw"></div>
     </div>
+    <section id="i6lli">
+     <div id="i66qd">
+      <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i5b74">
+       <h1><a href="#" class="nav-logo fw-bold text-decoration-none fs-2" id="ixlzd">Shopiana</a></h1>
+       <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="i5tnk">
+        <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="ito6f">HOME</a></li>
+        <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="ikxch">ABOUT</a></li>
+        <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="ib1u5i">CONTACT</a></li>
+       </ul>
+       <div class="hamburger4" id="ibj1pc">
+        <span class="bar4" id="ilems7"></span><span class="bar4" id="ir0ans"></span><span class="bar4"></span>
+       </div>
+      </nav>
+     </div>
+    </section>
     <div id="iui0s" class="carousel-inner">
      <div id="i04gd" class="carousel-item active">
       <div id="iwnqg" class="carousel-caption h-100">
        <section id="ittlp">
-        <div class="div" id="isvh8">
+        <div id="isvh8" class="div">
          <div id="ikh8l">
           BEING
          </div>
@@ -126,7 +141,7 @@
         <div id="ionu7">
          You can import the full demo content with just a single mouse click.
         </div>
-        <div class="div" id="i7tos">
+        <div id="i7tos" class="div">
          <button type="button" id="iuxon">DISCOVER</button><button type="button" id="inm9q">GET</button>
         </div>
        </section>
@@ -135,7 +150,7 @@
      <div id="itprq" class="carousel-item">
       <div id="iy3z9" class="carousel-caption h-100">
        <section id="iza2bw">
-        <div class="div" id="imki1">
+        <div id="imki1" class="div">
          <div id="i2gn5">
           ASPIRING
          </div>
@@ -149,7 +164,7 @@
         <div id="ih3xf">
          You can import the full demo content with just a single mouse click.
         </div>
-        <div class="div" id="i8gwly">
+        <div id="i8gwly" class="div">
          <button type="button" id="i1n38">DISCOVER</button><button type="button" id="ijbbg">GET</button>
         </div>
        </section>
@@ -187,11 +202,28 @@
     </div>
    </div>
   </div>
-  <section id="i6lli">
-   <section id="iowcc">
-    <div class="container" id="idzlk"></div>
-   </section>
+  <section id="io1trn">
+   <div class="container px-4" id="ibc1m3">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="ipvvbi">
+     <div class="col" id="i2htuy">
+      <div id="i9tczw">
+       STRATEGY
+      </div>
+      <div id="iq0kgx">
+       Lorem ipsum dolor sit amet adipiscing elit. Aenean commodo ligula eget dolor.
+      </div><a id="isyb28">View All</a>
+     </div>
+     <div class="col" id="i8trci"></div>
+     <div class="col" id="i30y9j"></div>
+    </div>
+   </div>
   </section>
+  <script>var items = document.querySelectorAll('#i66qd');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+const t=this.querySelectorAll(".hamburger4"),e=this.querySelectorAll(".nav-menu");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("active")})
+}.bind(items[i]))();
+          }</script>
  </body>
 </html>
 </html>
