5d77f55e-abe2-49f8-adb8-bad45acc2eaf

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
     <section id="i6lli">
      <div id="i66qd">
       <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i5b74">
-       <h1><a href="#" class="nav-logo text-decoration-none fs-2" id="ixlzd">Shopiana</a></h1>
+       <h1><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-logo text-decoration-none fs-2" id="ixlzd">Shopiana</a></h1>
        <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="i5tnk">
-        <li class="nav-item list-unstyled text-decoration-none" id="iq3n9"><a href="#" class="nav-link" id="ito6f">HOME</a></li>
-        <li class="nav-item list-unstyled text-decoration-none" id="im503"><a href="#" class="nav-link" id="ikxch">ABOUT</a></li>
-        <li class="nav-item list-unstyled text-decoration-none" id="i390nj"><a href="#" class="nav-link" id="ib1u5i">CONTACT</a></li>
+        <li class="nav-item list-unstyled text-decoration-none" id="iq3n9"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="ito6f">HOME</a></li>
+        <li class="nav-item list-unstyled text-decoration-none" id="im503"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" class="nav-link" id="ikxch">ABOUT</a></li>
+        <li class="nav-item list-unstyled text-decoration-none" id="i390nj"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" class="nav-link" id="ib1u5i">CONTACT</a></li>
        </ul>
        <div class="hamburger4" id="ibj1pc">
         <span class="bar4" id="ilems7"></span><span class="bar4" id="ir0ans"></span><span class="bar4" id="invxov"></span>
