c38dc01d-28a6-4fc7-ab2a-cb893c6abc76

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
  <head></head>
  <body id="iuhh9z">
   <section id="iot4ex">
-   <div class="div" id="ihc6z6">
+   <div id="ihc6z6" class="div">
     <div id="is7584">
      ABOUT US
     </div>
@@ -88,36 +88,36 @@
   </section>
   <section id="ibpu8xg">
    <div id="il5psel">
-    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="ikhn9rt">
-     <h1><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-logo text-decoration-none fs-2" id="iegbmw8">Shopiana</a></h1>
-     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="ir6qzte">
-      <li class="nav-item list-unstyled text-decoration-none" id="iebp5tk"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="i72b5zl">HOME</a></li>
-      <li class="nav-item list-unstyled text-decoration-none" id="iu5i3jp"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" class="nav-link" id="i44v6ep">ABOUT</a></li>
-      <li class="nav-item list-unstyled text-decoration-none" id="iegokds"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" class="nav-link" id="i1uf27h">CONTACT</a></li>
+    <nav id="ikhn9rt" class="px-3 py-2 d-flex justify-content-between align-items-center position-relative">
+     <h1><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="iegbmw8" class="nav-logo text-decoration-none fs-2">Shopiana</a></h1>
+     <ul id="ir6qzte" class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4">
+      <li id="iebp5tk" class="nav-item list-unstyled text-decoration-none"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="i72b5zl" class="nav-link">HOME</a></li>
+      <li id="iu5i3jp" class="nav-item list-unstyled text-decoration-none"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" id="i44v6ep" class="nav-link">ABOUT</a></li>
+      <li id="iegokds" class="nav-item list-unstyled text-decoration-none"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" id="i1uf27h" class="nav-link">CONTACT</a></li>
      </ul>
-     <div class="hamburger4" id="ix2lasn">
-      <span class="bar4" id="iv3xkmi"></span><span class="bar4" id="if9m6hs"></span><span class="bar4" id="id7opwq"></span>
+     <div id="ix2lasn" class="hamburger4">
+      <span id="iv3xkmi" class="bar4"></span><span id="if9m6hs" class="bar4"></span><span id="id7opwq" class="bar4"></span>
      </div>
     </nav>
    </div>
   </section>
   <section id="iq4826">
-   <div class="container-fluid" id="ijwk4u">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="igvid1">
-     <div class="col" id="ijm7it">
+   <div id="ijwk4u" class="container-fluid">
+    <div id="igvid1" class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+     <div id="ijm7it" class="col">
       <div id="iahszx">
        WHAT WE DO?
       </div>
      </div>
-     <div class="col" id="i5kmpu">
+     <div id="i5kmpu" class="col">
       <div id="iyy5ex">
        A NEW WAY TO CREATE PROJECT
       </div>
       <div id="ihxyt2">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis Theme natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      </div><a class="text-decoration-none fst-italic" id="iwedsl">View More</a>
+      </div><a id="iwedsl" class="text-decoration-none fst-italic">View More</a>
      </div>
-     <div class="col" id="ia28jx">
+     <div id="ia28jx" class="col">
       <section id="i1ich4">
        <div id="i530zq">
         149
@@ -144,16 +144,16 @@
       </section>
      </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="ihofog">
-     <div class="col" id="in8a4r">
+    <div id="ihofog" class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+     <div id="in8a4r" class="col">
       <div id="if4e93">
        SKILLS
       </div>
      </div>
-     <div class="col" id="isp4q1">
-      <div class="div" id="itciwt">
+     <div id="isp4q1" class="col">
+      <div id="itciwt" class="div">
        <section id="i0enib">
-        <div class="div" id="ix8vvs">
+        <div id="ix8vvs" class="div">
          <div id="iae44h">
           MARKETING
          </div>
@@ -161,10 +161,10 @@
           94%
          </div>
         </div>
-        <div class="div" id="iept0d"></div>
+        <div id="iept0d" class="div"></div>
        </section>
        <section id="iw652i">
-        <div class="div" id="ifves7">
+        <div id="ifves7" class="div">
          <div id="iveft9">
           ADVERTISEMENTS
          </div>
@@ -172,77 +172,77 @@
           83%
          </div>
         </div>
-        <div class="div" id="itwh03"></div>
+        <div id="itwh03" class="div"></div>
        </section>
       </div>
      </div>
-     <div class="col" id="iynroz">
+     <div id="iynroz" class="col">
       <div id="i4rshk">
        A NEW WAY TO CREATE PROJECT
       </div>
       <div id="is6rd7">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis Theme natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      </div><a class="text-decoration-none fst-italic" id="ivvapm">View More</a>
+      </div><a id="ivvapm" class="text-decoration-none fst-italic">View More</a>
      </div>
     </div>
    </div>
   </section>
   <section id="iyuyuj"></section>
   <section id="i1lj3k">
-   <div class="container-fluid" id="i1l027">
-    <div class="row row-cols-md-2" id="i8jz1j">
-     <div class="col-sm-4 col-12" id="iyyuxl">
+   <div id="i1l027" class="container-fluid">
+    <div id="i8jz1j" class="row row-cols-md-2">
+     <div id="iyyuxl" class="col-sm-4 col-12">
       <div id="ioc36t">
        CLIENTS
       </div>
      </div>
-     <div class="col-sm-8" id="ibeysc">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="i3z977">
-       <div class="col" id="imd3jf">
+     <div id="ibeysc" class="col-sm-8">
+      <div id="i3z977" class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+       <div id="imd3jf" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/h1-carousel-img-2.png" alt="Image" id="iegmr7" class="img-fluid">
        </div>
-       <div class="col" id="idf0sf">
+       <div id="idf0sf" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/h1-carousel-img-3.png" alt="Image" id="ignbks" class="img-fluid">
        </div>
-       <div class="col" id="i7vwoq">
+       <div id="i7vwoq" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/h1-carousel-img-4.png" alt="Image" id="i3weyp" class="img-fluid">
        </div>
-       <div class="col" id="ixh1xb">
+       <div id="ixh1xb" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/h1-carousel-img-5.png" alt="Image" id="ie1h39" class="img-fluid">
        </div>
       </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="im4feo">
-       <div class="col" id="il9lre">
+      <div id="im4feo" class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+       <div id="il9lre" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/h1-carousel-img-1.png" alt="Image" id="ielybg" class="img-fluid">
        </div>
-       <div class="col" id="id65ri">
+       <div id="id65ri" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/carousel-img-6.png" alt="Image" id="ij4nss" class="img-fluid">
        </div>
-       <div class="col" id="ipxdig">
+       <div id="ipxdig" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/carousel-img-7.png" alt="Image" id="itrmui" class="img-fluid">
        </div>
-       <div class="col" id="i2m1i7">
+       <div id="i2m1i7" class="col">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/marketing23121302/ASSET/carousel-img-8.png" alt="Image" id="i0676k" class="img-fluid">
        </div>
       </div>
      </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="imwxzk">
-     <div class="col" id="ig6khl">
+    <div id="imwxzk" class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+     <div id="ig6khl" class="col">
       <div id="irmjv5">
        SAY HI!
       </div>
      </div>
-     <div class="col" id="izwx2z">
+     <div id="izwx2z" class="col">
       <div id="iklg6h">
        CREATE PROJECT
       </div>
       <div id="i2qqj3">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis Theme natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      </div><a class="text-decoration-none fst-italic" id="i1qnhx">View More</a>
+      </div><a id="i1qnhx" class="text-decoration-none fst-italic">View More</a>
      </div>
-     <div class="col" id="ipansk">
-      <div class="div" id="itoxbg">
+     <div id="ipansk" class="col">
+      <div id="itoxbg" class="div">
        <section id="i8iku6">
         <div id="iyi60j">
          WANT
@@ -262,46 +262,46 @@
     </div>
    </div>
   </section>
-  <footer class="text-center text-lg-start text-muted w-100 bg-white" id="ivbb13">
+  <footer id="ivbb13" class="text-center text-lg-start text-muted w-100 bg-white">
    <!-- Section: Social media --><!-- Section: Social media --><!-- Section: Links  -->
    <section id="irqeqx">
-    <div class="text-center text-md-start container-fluid" id="inygxy">
+    <div id="inygxy" class="text-center text-md-start container-fluid">
      <!-- Grid row -->
-     <div class="row mt-3 row-cols-md-6" id="ilazte">
+     <div id="ilazte" class="row mt-3 row-cols-md-6">
       <!-- Grid column -->
-      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" id="ihqy92">
+      <div id="ihqy92" class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
        <!-- Content -->
        <p id="irrygg">ABOUT US</p>
        <p id="ibjzyz">Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.</p>
        <div id="ixdhex">
         <a href="" class="me-4 text-reset">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-facebook" id="i8ahi3">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="i8ahi3" class="bi bi-facebook">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
-         </svg></a><a href="" class="me-4 text-reset" id="iffjvj">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-linkedin" id="i0e2pl">
+         </svg></a><a href="" id="iffjvj" class="me-4 text-reset">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="i0e2pl" class="bi bi-linkedin">
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
          </svg></a><a href="" class="me-4 text-reset">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-instagram" id="ifyuf3">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="ifyuf3" class="bi bi-instagram">
           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path>
          </svg></a>
        </div>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="iwrhio">
+      <div id="iwrhio" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="ip9d1j">TWITTER</h6>
+       <h6 id="ip9d1j" class="text-uppercase mb-4">TWITTER</h6>
        <p id="i39a9r">Couldn't connect with twitter</p>
        <p></p>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="iuckf2">
+      <div id="iuckf2" class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="iih1f6">NEED HELP</h6>
-       <p id="ity16b"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="text-reset" id="ip3d9i">Home</a></p>
-       <p id="i6a5ao"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" class="text-reset" id="ik8wgo">About Us</a></p>
-       <p id="ig6s3l"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" class="text-reset" id="i37zfh">Contact Us</a></p>
+       <h6 id="iih1f6" class="text-uppercase mb-4">NEED HELP</h6>
+       <p id="ity16b"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="ip3d9i" class="text-reset">Home</a></p>
+       <p id="i6a5ao"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" id="ik8wgo" class="text-reset">About Us</a></p>
+       <p id="ig6s3l"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" id="i37zfh" class="text-reset">Contact Us</a></p>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" id="iqv1qi">
+      <div id="iqv1qi" class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="iy8rx7">Contact US</h6>
+       <h6 id="iy8rx7" class="text-uppercase mb-4">Contact US</h6>
        <section id="ikxhpn2">
         <div id="if3lyc6">
          Jaipur, Rajasthan (India)
@@ -310,7 +310,7 @@
          example@gmail.com
         </div>
         <div id="ifs6abw">
-         Jaipur, Rajasthan (India)
+         +91 000 1111 222
         </div>
        </section>
        <form id="igvooh">
@@ -320,7 +320,7 @@
      </div><!-- Grid row -->
     </div>
    </section><!-- Section: Links  --><!-- Copyright -->
-   <div class="text-center p-4" id="i1xxql">
+   <div id="i1xxql" class="text-center p-4">
     © 2021 Copyright: <a href="https://mdbootstrap.com/" class="text-reset fw-bold">Shopiana.com</a>
    </div><!-- Copyright -->
   </footer>
