--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
  <head></head>
  <body id="ivl08b">
   <section id="i5xmro">
-   <div class="div" id="ile03k">
+   <div id="ile03k" class="div">
     <div id="ic0wz3">
      CONTACT US
     </div>
@@ -88,22 +88,22 @@
   </section>
   <section id="iwtnp8i">
    <div id="i6532qb">
-    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="it86391">
-     <h1><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-logo text-decoration-none fs-2" id="i0c42bj">Shopiana</a></h1>
-     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="i2xv1zj">
-      <li class="nav-item list-unstyled text-decoration-none" id="io0mzm4"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="iffuc91">HOME</a></li>
-      <li class="nav-item list-unstyled text-decoration-none" id="izkagdb"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" class="nav-link" id="i9d8xc3">ABOUT</a></li>
-      <li class="nav-item list-unstyled text-decoration-none" id="i30unbg"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" class="nav-link" id="iufep4i">CONTACT</a></li>
+    <nav id="it86391" class="px-3 py-2 d-flex justify-content-between align-items-center position-relative">
+     <h1><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="i0c42bj" class="nav-logo text-decoration-none fs-2">Shopiana</a></h1>
+     <ul id="i2xv1zj" class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4">
+      <li id="io0mzm4" class="nav-item list-unstyled text-decoration-none"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="iffuc91" class="nav-link">HOME</a></li>
+      <li id="izkagdb" class="nav-item list-unstyled text-decoration-none"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" id="i9d8xc3" class="nav-link">ABOUT</a></li>
+      <li id="i30unbg" class="nav-item list-unstyled text-decoration-none"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" id="iufep4i" class="nav-link">CONTACT</a></li>
      </ul>
-     <div class="hamburger4" id="i6kmdpr">
-      <span class="bar4" id="ixhr8qe"></span><span class="bar4" id="ig7ivon"></span><span class="bar4" id="iiu7y4e"></span>
+     <div id="i6kmdpr" class="hamburger4">
+      <span id="ixhr8qe" class="bar4"></span><span id="ig7ivon" class="bar4"></span><span id="iiu7y4e" class="bar4"></span>
      </div>
     </nav>
    </div>
   </section>
-  <div class="container-fluid" id="ig0l67">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="idvh1h">
-    <div class="col" id="ivj0ny">
+  <div id="ig0l67" class="container-fluid">
+   <div id="idvh1h" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="ivj0ny" class="col">
      <section id="iby1evk">
       <section id="i6dqx3r">
        <div id="iy5v3l">
@@ -114,16 +114,16 @@
        </div>
       </section>
       <section id="i0hpo8">
-       <div class="div" id="i9s4u9">
-        <a class="text-decoration-none" id="i2xl7e">359 LAFAYETTE ST</a><a class="text-decoration-none" id="imn4sj">+91 000 1111 2222</a><a class="text-decoration-none" id="ieriri">example1@gmail.com</a>
+       <div id="i9s4u9" class="div">
+        <a id="i2xl7e" class="text-decoration-none">359 LAFAYETTE ST</a><a id="imn4sj" class="text-decoration-none">+91 000 1111 2222</a><a id="ieriri" class="text-decoration-none">example1@gmail.com</a>
        </div>
-       <div class="div" id="i53sai">
-        <a class="text-decoration-none" id="il7ay8">401 LAF-ETTE-ST</a><a class="text-decoration-none" id="ix79dn">+91 010 1001 0202</a><a class="text-decoration-none" id="i1ndsq">example2@gmail.com</a>
+       <div id="i53sai" class="div">
+        <a id="il7ay8" class="text-decoration-none">401 LAF-ETTE-ST</a><a id="ix79dn" class="text-decoration-none">+91 010 1001 0202</a><a id="i1ndsq" class="text-decoration-none">example2@gmail.com</a>
        </div>
       </section>
      </section>
     </div>
-    <div class="col" id="ib9ae2">
+    <div id="ib9ae2" class="col">
      <section id="i3xoz38">
       <div id="i834cl">
        POST A COMMENT
@@ -151,46 +151,46 @@
     </div>
    </div>
   </div><iframe frameborder="0" id="it3vbhf" src="https://maps.google.com/maps?&amp;q=jaipur&amp;z=11&amp;t=q&amp;output=embed"></iframe>
-  <footer class="text-center text-lg-start text-muted w-100 bg-white" id="ijf6xl9">
+  <footer id="ijf6xl9" class="text-center text-lg-start text-muted w-100 bg-white">
    <!-- Section: Social media --><!-- Section: Social media --><!-- Section: Links  -->
    <section id="inu6x4c">
-    <div class="text-center text-md-start container-fluid" id="ihh5qfw">
+    <div id="ihh5qfw" class="text-center text-md-start container-fluid">
      <!-- Grid row -->
-     <div class="row mt-3" id="ik1hfti">
+     <div id="ik1hfti" class="row mt-3">
       <!-- Grid column -->
-      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" id="ipuj1b8">
+      <div id="ipuj1b8" class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
        <!-- Content -->
        <p id="ivb5jcj">ABOUT US</p>
        <p id="i1w7vb8">Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.</p>
        <div id="ih4drx3">
         <a href="" class="me-4 text-reset">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-facebook" id="i8lwivq">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="i8lwivq" class="bi bi-facebook">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
-         </svg></a><a href="" class="me-4 text-reset" id="i2mrz3g">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-linkedin" id="i98csro">
+         </svg></a><a href="" id="i2mrz3g" class="me-4 text-reset">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="i98csro" class="bi bi-linkedin">
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
          </svg></a><a href="" class="me-4 text-reset">
-         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" class="bi bi-instagram" id="i9n82o1">
+         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewbox="0 0 16 16" id="i9n82o1" class="bi bi-instagram">
           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path>
          </svg></a>
        </div>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="iwpw1be">
+      <div id="iwpw1be" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="ig1jhmd">TWITTER</h6>
+       <h6 id="ig1jhmd" class="text-uppercase mb-4">TWITTER</h6>
        <p id="i4haggg">Couldn't connect with twitter</p>
        <p></p>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="isr95x7">
+      <div id="isr95x7" class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="i6pw7gg">NEED HELP</h6>
-       <p id="i3paj76"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="text-reset" id="iju1o8m">Home</a></p>
-       <p id="il0zhx4"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" class="text-reset" id="inodpke">About Us</a></p>
-       <p id="i85pwdh"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" class="text-reset" id="idn8xq6">Contact Us</a></p>
+       <h6 id="i6pw7gg" class="text-uppercase mb-4">NEED HELP</h6>
+       <p id="i3paj76"><a page="page://eLwprqgyNP0wRhIy" name="index" slug="index" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" id="iju1o8m" class="text-reset">Home</a></p>
+       <p id="il0zhx4"><a page="page://VsHE44Ki8uwrAbwc8" name="About" slug="about" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/about.html" link-type="page" id="inodpke" class="text-reset">About Us</a></p>
+       <p id="i85pwdh"><a page="page://yvoHPqcwZIBQ1VvWjC" name="Contact" slug="contact" href="//marketing-agency-shopiana-webbuilder-production.vercel.app/contact.html" link-type="page" id="idn8xq6" class="text-reset">Contact Us</a></p>
       </div><!-- Grid column --><!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" id="i829y3n">
+      <div id="i829y3n" class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
        <!-- Links -->
-       <h6 class="text-uppercase mb-4" id="i8dcbvy">Contact US</h6>
+       <h6 id="i8dcbvy" class="text-uppercase mb-4">Contact US</h6>
        <section id="ihhvnao">
         <div id="i530gzc">
          Jaipur, Rajasthan (India)
@@ -199,7 +199,7 @@
          example@gmail.com
         </div>
         <div id="i8cm7ud">
-         Jaipur, Rajasthan (India)
+         +91 000 1111 222
         </div>
        </section>
        <form id="i1kh2ik">
@@ -209,7 +209,7 @@
      </div><!-- Grid row -->
     </div>
    </section><!-- Section: Links  --><!-- Copyright -->
-   <div class="text-center p-4" id="ijxm3c3">
+   <div id="ijxm3c3" class="text-center p-4">
     © 2021 Copyright: <a href="https://mdbootstrap.com/" class="text-reset fw-bold">Shopiana.com</a>
    </div><!-- Copyright -->
   </footer>
